# nano281

./: .gitignore  Lab 3 NANO181.md  Lab 3 NANO281.md  README.md  _config.yml  assignments.md  build_latex.sh  environment.yml  exercise1.md  index.md  lab1.md  lab2.md  labs.md  nano281.yml  nano281_env.yml  nanox81.yml  pyproject.toml  requirements.txt  setup.md  syllabus.md  tasks.py
.github/workflows/: lint.yml  test.yml
assets/: data2022.csv  element_properties.csv
exercises/: exercise_1.md
labs/lab1/: README.md
labs/lab2/: README.md  data2022.csv  element_properties.csv
labs/lab3/: README.md  sample_submission.csv  test.csv  train.csv
lectures/: 07 - Maximum Likelihood and Expectation Maximization.ipynb  3_gaussians.txt  Lecture 02 - Linear methods.ipynb  Lecture 04 - Linear Methods for Classification.ipynb  Lecture 05 - Unsupervised learning.ipynb  Lecture 06 - Kernel methods.ipynb  Lecture 08 - Generalized Additive Models and Trees and Boosting.ipynb  Lecture 08 - Generalized Additive Models and Trees.ipynb  Lecture 2 - Linear methods.ipynb  Linear methods.ipynb  binary_band_gap.csv  metal_insulator_tree.dot
lectures/notebooks/: 3_gaussians.txt  Lecture 01 - Python for Data Science.ipynb  Lecture 02 - Linear methods.ipynb  Lecture 03 - Linear methods.ipynb  Lecture 04 - Linear Methods for Classification.ipynb  Lecture 05 - Unsupervised learning.ipynb  Lecture 06 - Kernel methods.ipynb  Lecture 07 - Maximum Likelihood and EM.ipynb  Lecture 08 - Generalized Additive Models and Trees and Boosting.ipynb  Lecture 08 - Trees and Boosting.ipynb  Lecture 09 - Neural Networks.ipynb  binary_band_gap.csv  element_data.csv  element_properties.csv  metal_insulator_tree.dot
lectures/slides/: 02 - Linear_Methods.tex  05 - Unsupervised Learning.tex  08 - Generalized Additive Models and Trees.tex  refs.bib
lectures/slides_tex/: 00-Course_Admin.tex  01-Python_for_Data_Science.tex  02 - Introduce to Data Science in Materials Science.tex  02-Data_Science_in_Materials_Science.tex  02-Introduction_to_Data_Science_in_Materials_Science.tex  03-Extending_Linear_Methods.tex  03-Linear_Methods.tex  04-Improving_and_extending_linear_models.tex  04-Linear_Classification.tex  05-Linear_Classification.tex  05-Unsupervised_Learning.tex  06-Kernel_Regression.tex  06-Unsupervised_Learning.tex  07-Kernel_Methods.tex  07-Kernel_Regression.tex  07-Maximum_Likelihood.tex  08-Generalized_Additive_Models_and_Trees.tex  09-Neural_Networks.tex  10-Review.tex  11-Maximum_Likelihood.tex  example_basic_python.py  example_element_features.py  example_hello_world_python.py  example_imports.py  example_knn.py  example_materials_api.py  example_numpy.py  example_pandas.py  example_pandas_data_manipulation.py  example_plotting.py  example_scipy.py  example_sklearn.py  example_sklearn_adaboost.py  example_sklearn_clustering.py  example_sklearn_cv.py  example_sklearn_decision_tree.py  example_sklearn_discriminant_analysis.py  example_sklearn_em.py  example_sklearn_gradient_boosting.py  example_sklearn_logistic__regression.py  (+8 more)
lectures/slides_tex/figures/: neural_network.graffle  neural_network_tikz.tex  randomforestalgo.graffle
